--- a/css/styles.css
+++ b/css/styles.css
@@ -106,6 +106,11 @@
 }
 /* STORY SENTENCES BOXES END */
 
+@keyframes fadein {
+    0% { opacity: 0; }
+    100% {opacity: 1; }
+}
+
 
 
 /* INPUT BOX STUFF START */
@@ -113,3 +118,7 @@ textarea {
     resize: none;
 }
 /* INPUT BOX STUFF END */
+
+footer {
+    margin-top: 20px;
+}
